@@ -862,7 +862,7 @@
     details than for C, and most CPU designers (for good reasons elaborated
     below) have not stepped up to publish C++ ABIs.  Such an ABI has been
     defined for the Itanium architecture (see
-    <a class="link" href="http://www.codesourcery.com/cxx-abi/" target="_top">C++
+    <a class="link" href="http://mentorembedded.github.io/cxx-abi/" target="_top">C++
     ABI for Itanium</a>) and that is used by G++ and other compilers
     as the de facto standard ABI on many common architectures (including x86).
     G++ can also use the ARM architecture's EABI, for embedded
