@@ -478,7 +478,7 @@
       Examples: <code class="code">_S_max_elements  _S_default_value</code><br />
 <br />
       Don't use names in the same scope that differ only in the prefix,<br />
-      e.g. _S_top and _M_top. See BADNAMES for a list of forbidden names.<br />
+      e.g. _S_top and _M_top. See <a class="link" href="source_code_style.html#coding_style.bad_identifiers" title="Bad Identifiers">BADNAMES</a> for a list of forbidden names.<br />
       (The most tempting of these seem to be and "_T" and "__sz".)<br />
 <br />
       Names must never have "__" internally; it would confuse name<br />
